--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 services:
 
   db:
@@ -10,6 +9,8 @@ services:
       POSTGRES_DB: contentapi
       POSTGRES_USER: django
       POSTGRES_PASSWORD: django
+    ports:
+      - "5452:5432"
     expose:
       - 5432
 
@@ -37,6 +38,19 @@ services:
       - type: bind
         source: ./src
         target: /src
+    environment:
+      DATABASE_URL: postgres://django:django@db/contentapi
+      REDIS_URL: redis://redis:6379/1
+  worker:
+    container_name: contentapi-worker
+    build:
+      context: .
+      dockerfile: DockerFile
+    command: "celery -A contentapi worker -l info -B"
+    working_dir: /src
+    depends_on:
+      - db
+      - redis
     environment:
       DATABASE_URL: postgres://django:django@db/contentapi
       REDIS_URL: redis://redis:6379/1
